# smart-content-recommendations

./: .dockerignore  .env.aws.example  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  Makefile  PRODUCTION_DEPLOYMENT.md  Pipfile  README.md  alembic.ini  docker-compose.override.yml.example  docker-compose.prod.yml  docker-compose.yml  pyproject.toml  pytest.ini  requirements.txt  run_local.py  test_production_system.py  test_recommendations.py  test_results_summary.md
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 001_initial_database_schema.py  002_add_recommendation_tracking.py
app/: config.py  database.py  dependencies.py  main.py
app/algorithms/: __init__.py  base.py  collaborative_filtering.py  content_based.py  hybrid.py  trending.py
app/api/routes/: recommendations.py
app/api/v1/: api.py
app/api/v1/endpoints/: analytics.py  auth.py  categories.py  content.py
app/core/: cache.py  exceptions.py  security.py  storage.py
app/models/: __init__.py  content.py  interaction.py  recommendation_log.py  user.py
app/repositories/: __init__.py  base.py  content_repository.py  interaction_repository.py  user_repository.py
app/schemas/: auth.py  content.py  recommendations.py
app/services/: auth_service.py  base.py  content_service.py  performance_service.py  recommendation_service.py  user_service.py
app/tasks/: __init__.py  analytics_tasks.py  celery_app.py  content_tasks.py  recommendation_tasks.py
aws/: cloudformation-infrastructure.yml  ecs-task-definition.json
docs/: AWS_DEPLOYMENT_GUIDE.md  AWS_MIGRATION_SUMMARY.md  DOCKER_SETUP.md  PRODUCTION_DEPLOYMENT.md  RECOMMENDATION_TRACKING_GUIDE.md  USAGE_GUIDE.md
scripts/: create_test_user.py  dev-commands.sh  dev-setup.sh  health_check.py  init-db.sql  inspect_content.py  quick_test.py  recommendation_tracker.py  redis.conf  run_local.py  run_migrations.py  seed_data.py  simple_test.sh  test_with_docker.sh
scripts/production/: backup.sh  deploy.sh
tests/: conftest.py
tests/fixtures/: sample_data.json
tests/integration/: test_recommendation_flow.py
tests/unit/algorithms/: test_content_based.py  test_hybrid.py
tests/unit/core/: test_cache.py
tests/unit/services/: test_recommendation_service.py
