[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "smart-content-recommendations"
version = "1.0.0"
description = "AI-powered content recommendation platform with multiple algorithms"
authors = [
    {name = "Smart Content Team", email = "team@smartcontent.com"},
]
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Framework :: FastAPI",
    "Topic :: Internet :: WWW/HTTP :: HTTP Servers",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "fastapi>=0.68.0",
    "uvicorn[standard]>=0.15.0",
    "sqlalchemy>=1.4.0",
    "alembic>=1.7.0",
    "asyncpg>=0.24.0",
    "redis>=4.0.0",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "python-multipart>=0.0.5",
    "pydantic>=1.8.0",
    "pydantic[email]>=1.8.0",
    "celery>=5.2.0",
    "numpy>=1.21.0",
    "scikit-learn>=1.0.0",
    "pandas>=1.3.0",
    "psutil>=5.8.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=6.2.0",
    "pytest-asyncio>=0.15.0",
    "pytest-cov>=2.12.0",
    "httpx>=0.24.0",
    "black>=21.9.0",
    "isort>=5.9.0",
    "flake8>=3.9.0",
    "mypy>=0.910",
    "pre-commit>=2.15.0",
]
test = [
    "pytest>=6.2.0",
    "pytest-asyncio>=0.15.0",
    "pytest-cov>=2.12.0",
    "httpx>=0.24.0",
    "factory-boy>=3.2.0",
    "faker>=8.0.0",
]
monitoring = [
    "prometheus-client>=0.11.0",
    "sentry-sdk[fastapi]>=1.5.0",
]

[project.urls]
Homepage = "https://github.com/your-org/smart-content-recommendations"
Documentation = "https://docs.smartcontent.com"
Repository = "https://github.com/your-org/smart-content-recommendations.git"
"Bug Tracker" = "https://github.com/your-org/smart-content-recommendations/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]
exclude = ["tests*"]

[tool.black]
line-length = 88
target-version = ['py39']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
  | migrations
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88
known_first_party = ["app", "tests"]

[tool.mypy]
python_version = "3.11"
plugins = ["pydantic.mypy", "sqlalchemy.ext.mypy.plugin"]
check_untyped_defs = false
ignore_missing_imports = true
warn_unused_ignores = false
warn_redundant_casts = false
warn_unused_configs = false
disallow_untyped_defs = false
disallow_incomplete_defs = false
no_implicit_optional = false
strict_optional = false

[[tool.mypy.overrides]]
module = [
    "app.models.*",
    "app.schemas.*",
    "app.services.*",
    "app.repositories.*",
    "app.algorithms.*",
    "app.api.*",
    "app.tasks.*",
    "app.core.*",
    "app.dependencies"
]
ignore_errors = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short --strict-markers"
markers = [
    "unit: marks tests as unit tests",
    "integration: marks tests as integration tests",
    "e2e: marks tests as end-to-end tests",
    "slow: marks tests as slow running",
    "cache: marks tests related to caching",
    "algorithms: marks tests related to recommendation algorithms",
]
asyncio_mode = "auto"

[tool.coverage.run]
source = ["app"]
omit = [
    "*/tests/*",
    "*/migrations/*",
    "app/tasks/*",  # Celery tasks
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "@abstract",
]